--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 			href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
 			rel="stylesheet"
 		/>
-		<!-- <link
+		<link
 			rel="stylesheet"
 			href="./sass/main.scss"
-		/> -->
+		/>
 	</head>
 	<body>
 		<!-- nav overlay -->
@@ -207,9 +207,6 @@
 				</section>
 			</main>
 		</div>
-		<script
-			type="module"
-			src="./main.js"
-		></script>
+		<script src="./main.js"></script>
 	</body>
 </html>
